Overflow Bug Fixed

--- a/_sass/2020.scss
+++ b/_sass/2020.scss
@@ -1,5 +1,7 @@
 .year-twenty{
-  overflow-x: hidden;
+  .page-content{
+    overflow-x: hidden;
+  }
   .year-in-review{
     margin-bottom: 0;
     .nav-container{
